@@ -38,6 +38,7 @@
 
 #include <iostream>
 
+#include <visp3/robot/vpRobotPioneer.h> // Include first to avoid build issues with Status, None, isfinite
 #include <visp3/core/vpConfig.h>
 #include <visp3/core/vpDisplay.h>
 #include <visp3/core/vpImage.h>
@@ -46,7 +47,6 @@
 #include <visp3/gui/vpDisplayGDI.h>
 #include <visp3/gui/vpDisplayX.h>
 #include <visp3/io/vpImageIo.h>
-#include <visp3/robot/vpRobotPioneer.h> // Include before vpDisplayX to avoid build issues
 
 #ifndef VISP_HAVE_PIONEER
 int main()
